# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "rust_async",
    "rust_cookbook",
    "rust-linklist",
    "rust_course", # rust圣经 https://course.rs/about-book.html
    "rust_language", # https://doc.rust-lang.org/book/title-page.html
    "rust_quiz",     # https://github.com/dtolnay/rust-quiz
    "rust_code_challenge", #
    "web2image"
]