[package]
name = "rust_cookbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
rand = "0.8.5"
rand_distr = "0.4.3"
clap = "3.2.6"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.5"
lazy_static = "1.4.0"
rayon = "1.5.3"
ring = "0.17.0-alpha.11"
data-encoding = "2.3.2"
chrono="0.4.19"