[package]
name = "grammar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "event"
path = "src/event.rs"
[[bin]]
name = "fib"
path = "src/fib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
html2md = "0.2"