[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

[[example]]
name = "cli"
path = "./example/cli.rs"

[[example]]
name = "cli_verify"
path = "./example/cli_verify.rs"

[[example]]
name = "cli_get"
path = "./example/cli_get.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1" # 错误处理
clap = { version = "3", features = ["derive"] } # 命令行解析
colored = "2"  # 命令行多彩显示
jsonxf = "1.1"   # json 格式化
mime = "0.3" # 处理mime类型
reqwest = { version = "0.11", features = ["json"] }  # HTTP 客户端
tokio = { version = "1", features = ["full"] }       # 异步处理库
syntect = "4"